# gqoobpro

./: README  README.md
QoobProDriver/: Info.plist  README
QoobProDriver/English.lproj/: InfoPlist.strings
QoobProDriver/QoobProDriver.xcode/: project.pbxproj
libqoob/: ChangeLog  Makefile.am  NEWS  README  ReleaseNotes  TODO  autogen.sh  configure.ac  libqoob.pc.in
libqoob/data/: 86-qoobpro.rules  qoobpro.conf
libqoob/packaging/debian/: changelog  control  copyright  libqoob-dev.install  libqoob.install  libqoob.postinst  libqoob0.install  libqoob0.postinst  libqoob0.postrm  rules
libqoob/packaging/ubuntu-xenial/: control  copyright  libqoob-dev.install  libqoob0.install  libqoob0.postinst  libqoob0.postrm  rules
libqoob/src/: Makefile.am  qoob-defaults.h  qoob-error.c  qoob-error.h  qoob-file.c  qoob-file.h  qoob-struct.h  qoob-sync-usb.c  qoob-sync-usb.h  qoob-sync.c  qoob-sync.h  qoob-usb.c  qoob-usb.h  qoob.c  qoob.h
qoob-flasher/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  ReleaseNotes  autogen.sh  configure.ac
qoob-flasher/packaging/debian/: changelog  control  qoob-flasher.install  rules
qoob-flasher/packaging/ubuntu-xenial/: changelog  control  copyright  qoob-flasher.install  rules
qoob-flasher/src/: Makefile.am  qoob-flasher-util.c  qoob-flasher-util.h  qoob-flasher.1  qoob-flasher.c
